--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -5,16 +5,16 @@ import = ["~/.config/alacritty/themes/themes/gruvbox_dark.toml"]
 TERM = "xterm-256color"
 
 [font]
-size = 25
+size = 23
 
 [font.normal]
+# family = "Berkeley Mono Trial"
 family = "UbuntuMono Nerd Font"
-# family = "CaskaydiaCove Nerd Font"
-# family = "CaskaydiaMono Nerd Font"
-# family = "FiraMono Nerd Font"
-# family = "IosevkaTerm Nerd Font Mono"
-# family = "JetBrainsMono Nerd Font"
-# family = "Hack Nerd Font Mono"
+#family = "CaskaydiaMono Nerd Font"
+#family = "FiraMono Nerd Font"
+#family = "IosevkaTerm Nerd Font Mono"
+#family = "JetBrainsMono Nerd Font"
+#family = "Hack Nerd Font Mono"
 
 [window]
 decorations = "Full"
